Explore switching the Gradle build to org.gradlex.java-module plugins (#13324)
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>
Co-authored-by: Siedlerchr <siedlerkiller@gmail.com>